--- a/Brayan/Index.html
+++ b/Brayan/Index.html
@@ -5,10 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles.css">
 
 </head>
 <body>
+
+<!-- Diseño de navegación -->
+    <nav class="nav">
+        <a class="a_nav" href="">A</a>
+        <a class="a_nav" href="https://www.apple.com/co/mac/">Mac</a>
+        <a class="a_nav" href="https://www.apple.com/co/ipad/">iPad</a>
+        <a class="a_nav" href="https://www.apple.com/co/iphone/">iPhone</a>
+        <a class="a_nav" href="https://www.apple.com/co/watch/">Watch</a>
+        <a class="a_nav" href="https://www.apple.com/co/airpods/">AirPods</a>
+        <a class="a_nav" href="https://www.apple.com/co/tv-home/">TV y Casa</a>
+        <a class="a_nav" href="https://www.apple.com/co/services/">Sólo en Apple</a>
+        <a class="a_nav" href="https://support.apple.com/es-co">Soporte</a>
+        <a class="a_nav" href="https://locate.apple.com/co/es/">Dónde Comprar</a>
+        <a class="a_nav" href="">O</a>
+    </nav>
     
+
+<!-- Diseño primera seccion - Principal -->
+    <section>
+        <div class="seccion_uno">
+        </div>
+    </section>
+
+
 </body>
 </html>
