--- a/Brayan/Index.html
+++ b/Brayan/Index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apple Economica</title>
     <link rel="stylesheet" href="Styles.css">
 
 </head>
 <body>
 
-<!-- Diseño de navegación -->
+<!-- Diseño de navegación --------------------------------------->
     <nav class="nav">
         <a class="a_nav" href="">A</a>
         <a class="a_nav" href="https://www.apple.com/co/mac/">Mac</a>
@@ -26,12 +26,23 @@
     </nav>
     
 
-<!-- Diseño primera seccion - Principal -->
-    <section>
-        <div class="seccion_uno">
+<!-- Diseño primera seccion - Principal ------------------------>
+    <section class="seccion_uno">
+        <a class="seccion_uno" href=""></a>
+        <div class="text"> 
+            <p>iPhone 14 Pro</p>
+            <p>Se pasa de Pro.</p>
+            <p>Consulta la disponibilidad más adelante</p>
+            <a href="">Más información ></a>
         </div>
+        
     </section>
 
+
+<!-- Diseño de pie de pagina ------------------------------------->
+    <footer>
+        <p>Apple temporalmente no puede ofrecer dispositivos con tecnología 5G en Colombia debido a una orden de un tribunal colombiano, decisión que Apple está apelando.</p>
+    </footer>
 
 </body>
 </html>
